--- a/favanimal.html
+++ b/favanimal.html
@@ -10,6 +10,6 @@
     <h1>Tiger!!!!!</h1>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Panthera_tigris_tigris_Tidoba_20150306.jpg/1920px-Panthera_tigris_tigris_Tidoba_20150306.jpg" alt="Tiger photo">
     <p>The tiger (Panthera tigris) is the largest species among the Felidae and classified in the genus Panthera. It is most recognisable for its dark vertical stripes on reddish-orange fur with a lighter underside. It is an apex predator, primarily preying on ungulates such as deer and wild boar. It is territorial and generally a solitary but social predator, requiring large contiguous areas of habitat, which support its requirements for prey and rearing of its offspring. Tiger cubs stay with their mother for about two years, before they become independent and leave their mother's home range to establish their own.</p>
-    
+    <a href="https://alfa9317.github.io/GitHub-Pages-Example/fanpage.html">PJ Fan Page</a>
 </body>
 </html>
