link to favanimal.html

--- a/fanpage.html
+++ b/fanpage.html
@@ -107,7 +107,8 @@
 
         <iframe width="420" height="345" src="https://www.youtube.com/embed/Nkgv3LoQY2o">
         </iframe>
-        
+
+        <a href="https://alfa9317.github.io/GitHub-Pages-Example/favanimal.html">Go Back To Favorite Animal!</a>
 
     </body>
 </html>
